Description
For russian version.
GetLocaleInfo result in XP: RUS
GetLocaleInfo result in ROS: Russian
For other languages same problem.
P.S.
Also some strings are not translated, which could lead to some problems in programs. For example, for the Russian version of ROS: LOCALE_SLANGUAGE, LOCALE_SCOUNTRY
Attachments
Issue Links
- is duplicated by
-
CORE-12287 Lazarus from RAPPS always installs English version.
-
- Resolved
-
- relates to
-
CORE-18410 GetLocaleInfo.LOCALE_SLANGUAGE is not localized
-
- Resolved
-