[USERINIT] [SYSSETUP] "sLanguage" relates to LOCALE_SABBREVLANGNAME actually, not LOCALE_SLANGUAGE. CORE-13128