dll/win32/syssetup/install.c
@@ -1113,7 +1113,7 @@ InitializeDefaultUserLocale(VOID)
 
         /* Misc */
         {LOCALE_SCOUNTRY, L"sCountry"},
-        {LOCALE_SLANGUAGE, L"sLanguage"},
+        {LOCALE_SABBREVLANGNAME, L"sLanguage"},
         {LOCALE_ICOUNTRY, L"iCountry"},
         {0, NULL}};
 
